# mcp-servers

./: .gitattributes  .gitignore  go.mod
apple-docs/: README.md  pyproject.toml
apple-docs/docs/: PLAN.md
apple-docs/src/apple_docs/: __init__.py  server.py
apple-docs/src/apple_docs/data/wwdc/: all-videos.json  index.json  topics.json
apple-docs/src/apple_docs/data/wwdc/by-topic/accessibility-inclusion/: index.json
apple-docs/src/apple_docs/data/wwdc/by-topic/app-services/: index.json
apple-docs/src/apple_docs/data/wwdc/by-topic/app-store-distribution-marketing/: index.json
apple-docs/src/apple_docs/data/wwdc/by-topic/audio-video/: index.json
apple-docs/src/apple_docs/data/wwdc/by-topic/business-education/: index.json
apple-docs/src/apple_docs/data/wwdc/by-topic/design/: index.json
apple-docs/src/apple_docs/data/wwdc/by-topic/developer-tools/: index.json
apple-docs/src/apple_docs/data/wwdc/by-topic/essentials/: index.json
apple-docs/src/apple_docs/data/wwdc/by-topic/graphics-games/: index.json
apple-docs/src/apple_docs/data/wwdc/by-topic/health-fitness/: index.json
apple-docs/src/apple_docs/data/wwdc/by-topic/machine-learning-ai/: index.json
apple-docs/src/apple_docs/data/wwdc/by-topic/maps-location/: index.json
apple-docs/src/apple_docs/data/wwdc/by-topic/photos-camera/: index.json
apple-docs/src/apple_docs/data/wwdc/by-topic/privacy-security/: index.json
apple-docs/src/apple_docs/data/wwdc/by-topic/safari-web/: index.json
apple-docs/src/apple_docs/data/wwdc/by-topic/spatial-computing/: index.json
apple-docs/src/apple_docs/data/wwdc/by-topic/swift/: index.json
apple-docs/src/apple_docs/data/wwdc/by-topic/swiftui-ui-frameworks/: index.json
apple-docs/src/apple_docs/data/wwdc/by-topic/system-services/: index.json
apple-docs/src/apple_docs/data/wwdc/by-year/2014/: index.json
apple-docs/src/apple_docs/data/wwdc/by-year/2015/: index.json
apple-docs/src/apple_docs/data/wwdc/by-year/2016/: index.json
apple-docs/src/apple_docs/data/wwdc/by-year/2017/: index.json
apple-docs/src/apple_docs/data/wwdc/by-year/2018/: index.json
apple-docs/src/apple_docs/data/wwdc/by-year/2019/: index.json
apple-docs/src/apple_docs/data/wwdc/by-year/2020/: index.json
apple-docs/src/apple_docs/data/wwdc/by-year/2021/: index.json
apple-docs/src/apple_docs/data/wwdc/by-year/2022/: index.json
apple-docs/src/apple_docs/data/wwdc/by-year/2023/: index.json
apple-docs/src/apple_docs/data/wwdc/by-year/2024/: index.json
apple-docs/src/apple_docs/data/wwdc/by-year/2025/: index.json
apple-docs/src/apple_docs/data/wwdc/videos/: 2014-223.json  2014-513.json  2014-602.json  2014-603.json  2014-604.json  2014-605.json  2015-206.json  2015-401.json  2015-402.json  2015-504.json  2015-602.json  2015-703.json  2015-705.json  2015-719.json  2015-802.json  2015-805.json  2016-230.json  2016-241.json  2016-411.json  2016-416.json  2016-419.json  2016-501.json  2016-509.json  2016-510.json  2016-511.json  2016-606.json  2016-720.json  2016-722.json  2016-723.json  2016-724.json  2016-725.json  2016-805.json  2017-110.json  2017-246.json  2017-247.json  2017-248.json  2017-249.json  2017-250.json  2017-251.json  2017-504.json  (+1226 more)
apple-docs/src/apple_docs/tools/: fetcher.py  frameworks.py  search.py  technologies.py  wwdc.py
apple-docs/src/apple_docs/types/: wwdc.py
apple-docs/src/apple_docs/utils/: constants.py  formatter.py  http_client.py  url_converter.py  wwdc_data_source.py
mem0/: pyproject.toml
mem0-mcp/: pyproject.toml
mem0-mcp/src/mem0_mcp/: __init__.py  __version__.py  main.py
sequential-thinking/: go.mod  go.sum  main.go
sequential-thinking-server/: go.mod  go.sum  main.go
vertex-memory-bank/: AGENTS.md  README.md  pyproject.toml
vertex-memory-bank/src/vertex_memory_bank/: __init__.py  app_state.py  clients.py  concurrency.py  config.py  engines.py  errors.py  formatters.py  prompts.py  server.py  services.py  tools.py  validators.py
vertex-memory-bank/tests/: test_formatters.py  test_validators.py
weaviate/: go.sum  version.go  weaviate.go
weaviate-mcp/: CLAUDE.md  go.mod  go.sum  main.go  mcp.go
